# video_detection_ffmpeg

./: .gitignore  CMakeLists.txt  decode.cpp  encode.cpp  encode_format.cpp  main.cpp
